--- a/css/screen.css
+++ b/css/screen.css
@@ -377,8 +377,7 @@ input:focus-visible {
     font-size: var(--global-fontsize-sm);
     float: left;
     width: 33.33%;
-    padding-top: var(--global-whitespace-md);
-    padding-bottom: var(--global-whitespace-md);
+    
     text-align: center;
     font-weight: 600;
     border-bottom: 2px solid var(--global-color-neutral-light);
@@ -392,6 +391,24 @@ input:focus-visible {
     border-bottom: 2px solid var(--global-active);
     transition: all .25s ease;
     font-weight: 700;
+}
+
+.c-nav__button{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    /* inherit font & color from ancestor */
+    color: inherit;
+    font: inherit;
+    border: none;
+    padding-top: var(--global-whitespace-md);
+    padding-bottom: var(--global-whitespace-md);
+    cursor: pointer;
+}
+.c-nav__button:focus-visible{
+    outline-style: none;
+    box-shadow: 2px 2px 2px var(--global-primary);
+    box-shadow: inset;
 }
 
 @media screen and (min-width:767px) {
@@ -411,7 +428,7 @@ input:focus-visible {
 */
 
 .c-cocktail__item {
-    height: 450px;/*toegevoegd voor card flip*/
+    height: 464px;/*toegevoegd voor card flip*/
     padding-top: var(--global-whitespace-md);
     padding-bottom: var(--global-whitespace-md);
     border-radius: 20px;
@@ -419,12 +436,12 @@ input:focus-visible {
     margin: var(--global-whitespace-md);
     perspective: 1000px;
     background-color: var(--global-inversecolor);
+    padding-left: var(--global-whitespace-md);
+        padding-right: var(--global-whitespace-md);
 }
 @media screen and (min-width:767px) {
     .c-cocktail__item {
         margin: 0px;
-        padding-left: var(--global-whitespace-md);
-        padding-right: var(--global-whitespace-md);
     }
 
     div .c-cocktail__image{
@@ -438,10 +455,15 @@ input:focus-visible {
     .c-cocktail__item {
         grid-column: 1 !important;
     }
+    .c-cocktail__imageFrame{
+        max-width: 280px;
+        margin: auto;
+    }
 }
 
 .c-cocktail__image{
-    height: 290px;
+    /* height: 290px; */
+    width: 100%;
     border-radius: 20px;
 }
 
