--- a/css/screen.css
+++ b/css/screen.css
@@ -60,6 +60,8 @@
     --global-whitespace-lg: calc(var(--global-baseline) * 4); /* = 32px */   
     --global-whitespace-xl: calc(var(--global-baseline) * 6); /* = 48px */ 
 
+    --global-radius: 20px;
+
     /* Font sizes */
     --global-fontsize-sm: 0.75rem;
     --global-fontsize: 1rem;
@@ -95,13 +97,13 @@ h5{
   
   /* Track */
   ::-webkit-scrollbar-track {
-    border-radius: 20px;
+    border-radius: var(--global-radius);
   }
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background: var(--global-primary); 
-    border-radius: 20px;
+    border-radius: var(--global-radius);
   }
   
   /* Handle on hover */
@@ -122,66 +124,6 @@ h5{
     padding: 0 var(--global-whitespace-md);
 }
 
-
-/*
-    layout
-*/
-
-.o-layout {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.o-layout__item {
-    width: 100%;
-}
-
-/* 
-    gutter modifiers, these affect o-layout__item too 
-*/
-
-.o-layout--gutter {
-    margin: 0 -12px;
-}
-
-.o-layout--gutter > .o-layout__item {
-    padding: 0 12px;
-}
-
-.o-layout--gutter-sm {
-    margin: 0 -6px;
-}
-
-.o-layout--gutter-sm > .o-layout__item {
-    padding: 0 6px;
-}
-
-.o-layout--gutter-lg {
-    margin: 0 -24px;
-}
-
-.o-layout--gutter-lg > .o-layout__item {
-    padding: 0 24px;
-}
-
-.o-layout--gutter-xl {
-    margin: 0 -48px;
-}
-
-.o-layout--gutter-xl > .o-layout__item {
-    padding: 0 48px;
-}
-
-/*
-    reverse horizontal row modifier
-*/
-
-.o-layout--row-reverse {
-    flex-direction: row-reverse;
-}
-
 /*
     css grid
 */
@@ -189,9 +131,9 @@ h5{
 .o-grid{
     display: grid;
 }
+
 @media screen and (min-width:767px) {
     .o-grid{
-        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         column-gap: var(--global-whitespace-md);
         row-gap: var(--global-whitespace-md);
@@ -205,7 +147,7 @@ h5{
 \*------------------------------------*/
 
 /*
-    header components
+    Header components
 */
 
 .c-header{
@@ -230,7 +172,7 @@ h5{
 }
 
 /*
-    search bar components
+    Search Bar components
 */
 
 .c-search__btn {
@@ -297,13 +239,13 @@ h5{
     cursor: pointer;
 }
 
-
 .c-search__input:focus {
     width: 40%; 
     padding: 0 80px 0 20px;
     opacity: 1;
     cursor: text;
 }
+
 @media screen and (min-width:767px) {
     .c-search__input:focus {
         width: 20%;
@@ -377,12 +319,10 @@ input:focus-visible {
     font-size: var(--global-fontsize-sm);
     float: left;
     width: 33.33%;
-    
     text-align: center;
     font-weight: 600;
     border-bottom: 2px solid var(--global-color-neutral-light);
     color: var(--global-color-neutral-light);
-    line-height: 16.1px;
     cursor: pointer;
 }
 
@@ -404,6 +344,10 @@ input:focus-visible {
     padding-top: var(--global-whitespace-md);
     padding-bottom: var(--global-whitespace-md);
     cursor: pointer;
+    /* small screen tabs overflow ... */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .c-nav__button:focus-visible{
     outline-style: none;
@@ -422,23 +366,23 @@ input:focus-visible {
     }
 }
 
-
 /*
-    card components
+    Card components
 */
 
 .c-cocktail__item {
     height: 464px;/*toegevoegd voor card flip*/
     padding-top: var(--global-whitespace-md);
     padding-bottom: var(--global-whitespace-md);
-    border-radius: 20px;
+    border-radius: var(--global-radius);
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     margin: var(--global-whitespace-md);
     perspective: 1000px;
     background-color: var(--global-inversecolor);
     padding-left: var(--global-whitespace-md);
-        padding-right: var(--global-whitespace-md);
+    padding-right: var(--global-whitespace-md);
 }
+
 @media screen and (min-width:767px) {
     .c-cocktail__item {
         margin: 0px;
@@ -447,7 +391,7 @@ input:focus-visible {
     div .c-cocktail__image{
         width: 100%;
         height: auto;
-        border-radius: 20px;
+        border-radius: var(--global-radius);
     }
 }
 /* bug fix random cocktail position */
@@ -462,16 +406,21 @@ input:focus-visible {
 }
 
 .c-cocktail__image{
-    /* height: 290px; */
     width: 100%;
-    border-radius: 20px;
+    border-radius: var(--global-radius);
 }
 
 .c-cocktail__name{
     text-align: center;
-    padding: var(--global-whitespace-md);
     font-size: var(--global-fontsize-lg);
-    font-weight: 600;
+    font-weight: 700;
+    /* max 2 lines overflow ... */
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: var(--global-whitespace-md) 0;
 }
 
 .cocktail__item-inner{
@@ -488,6 +437,12 @@ input:focus-visible {
     height: 100%;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
+}
+
+.c-cocktail__item-front{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .c-cocktail__item-back{
@@ -509,10 +464,13 @@ input:focus-visible {
 }
 
 /*
-    chart components (chart in card)
+    Chart components (chart in card)
 */
 
 .c-chart {
+}
+
+.c-chart__graph {
     font-weight: 700;
     width: 100%;
     height: 100px;
@@ -525,7 +483,7 @@ input:focus-visible {
     --percentage: 50;
 }
 
-.c-chart:after {
+.c-chart__graph:after {
     content: '';
     position: absolute;
     margin: auto;
@@ -540,13 +498,13 @@ input:focus-visible {
 
 .c-chart__label {
     display: flex;
-    width: 220px;
+    max-width: 220px;
     margin: auto;
     justify-content: space-between;
 }
 
 /*
-    error handling components
+    Error handling components
 */
 
 .c-noName {
